--- a/html/gallery.html
+++ b/html/gallery.html
@@ -65,7 +65,7 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                    <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
+                    <li><a class="dropdown-item" href="betts-goes-tech-when-it-comes-to-the-black-community.html">Blog Post</a></li>
                     <li><a class="dropdown-item" href="index-landing-page.html">Landing Page</a></li>
                     <li><a class="dropdown-item" href="events.html">Events</a></li>
                     <li><a class="dropdown-item" href="course-detail.html">Course Details</a></li>
