--- a/html/index-video.html
+++ b/html/index-video.html
@@ -75,7 +75,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
+                                    <li><a class="dropdown-item" href="betts-goes-tech-when-it-comes-to-the-black-community.html">Blog Post</a></li>
                                     <li><a class="dropdown-item" href="index-landing-page.html">Landing Page</a></li>
                                     <li><a class="dropdown-item" href="events.html">Events</a></li>
                                     <li><a class="dropdown-item" href="course-detail.html">Course Details</a></li>
@@ -388,7 +388,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8">
-                    <a href="blog-post.html" class="home_blog_link">
+                    <a href="betts-goes-tech-when-it-comes-to-the-black-community.html" class="home_blog_link">
                         <div class="blog-img_box">
                             <img src="images/blog-img_1.jpg" class="img-fluid blog_display" alt="blog-img">
                             <div class="blogtitle">
@@ -402,7 +402,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="blog-post.html" class="home_blog_link">
+                    <a href="betts-goes-tech-when-it-comes-to-the-black-community.html" class="home_blog_link">
                         <div class="blog-img_box">
                             <img src="images/blog-img_2.jpg" class="img-fluid blog_display" alt="blog-img">
                             <div class="blogtitle">
@@ -418,7 +418,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="blog-post.html" class="home_blog_link">
+                    <a href="betts-goes-tech-when-it-comes-to-the-black-community.html" class="home_blog_link">
                         <div class="blog-img_box">
                             <img src="images/blog-img_3.jpg" class="img-fluid blog_display" alt="blog-img">
                             <div class="blogtitle">
@@ -432,7 +432,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="blog-post.html" class="home_blog_link">
+                    <a href="betts-goes-tech-when-it-comes-to-the-black-community.html" class="home_blog_link">
                         <div class="blog_hide">
                             <i class="icon-link" aria-hidden="true"></i>
                             <p class="m-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been dummy...</p>
@@ -446,7 +446,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="blog-post.html" class="home_blog_link">
+                    <a href="betts-goes-tech-when-it-comes-to-the-black-community.html" class="home_blog_link">
                         <div class="blog-img_box">
                             <div class="blog-video">
                                 <div class="blog-play_btn"> <img src="images/play-btn.png" alt="play-btn"> </div>
