--- a/html/research.html
+++ b/html/research.html
@@ -62,7 +62,7 @@
                                      <li><a class="dropdown-item" href="index-2.html">Home Style Two</a></li>
                                             <li><a class="dropdown-item" href="index-video.html">Home Video</a></li>
                                         <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                                        <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
+                                        <li><a class="dropdown-item" href="betts-goes-tech-when-it-comes-to-the-black-community.html">Blog Post</a></li>
                                         <li><a class="dropdown-item" href="index-landing-page.html">Landing Page</a></li>
                                         <li><a class="dropdown-item" href="events.html">Events</a></li>
                                         <li><a class="dropdown-item" href="course-detail.html">Course Details</a></li>
