--- a/html/blog.html
+++ b/html/blog.html
@@ -128,7 +128,7 @@
                                 admittedly wears like a badge of honor.</p>
 
                         </div>
-                        <a href="#" style="color: #000">Read More</a>
+                        <a href="betts-goes-tech-when-it-comes-to-the-black-community.html" style="color: #000">Read More</a>
                     </div>
                 </div>
 
