--- a/html/betts-goes-tech-when-it-comes-to-the-black-community.html
+++ b/html/betts-goes-tech-when-it-comes-to-the-black-community.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MISLA blog-Pia Zi</title>
+    <title>Betts Goes Tech When It Comes To The Black Community</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <!-- Bootstrap CSS -->
