--- a/html/betts-goes-tech-when-it-comes-to-the-black-community.html
+++ b/html/betts-goes-tech-when-it-comes-to-the-black-community.html
@@ -319,43 +319,37 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-    </div>
 </section>
 <!--//END BLOG -->
-<!--============================= Instagram Feed =============================-->
-<div id="instafeed"></div>
-<!--//END Instagram feed JS -->
-<!--============================= FOOTER =============================-->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="subscribe">
-                    <h3>Newsletter</h3>
-                    <form id="subscribeform" action="php/subscribe.php" method="post">
-                        <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
-                        <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
-                        <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
-                        <!-- // end #js-subscribe-result -->
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="foot-logo">
-                    <a href="index.html">
-                        <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
-                    </a>
-                    <p>2016 © copyright
-                        <br> All rights reserved.</p>
+    <hr>
+    <footer>
+        <div class="container">
+            <!--        <div class="row">-->
+            <!--            <div class="col-md-12">-->
+            <!--                <div class="subscribe">-->
+            <!--                    <h3>Newsletter</h3>-->
+            <!--                    <form id="subscribeform" action="php/subscribe.php" method="post">-->
+            <!--                        <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">-->
+            <!--                        <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>-->
+            <!--                        <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>-->
+            <!--                        &lt;!&ndash; // end #js-subscribe-result &ndash;&gt;-->
+            <!--                    </form>-->
+            <!--                </div>-->
+            <!--            </div>-->
+            <!--        </div>-->
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="foot-logo">
+                        <a href="index.html">
+                            <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
+                        </a>
+                        <p>2020 © copyright
+                            <br> All rights reserved.</p>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="sitemap">
-                        <h3>Navigation</h3>
+                        <h3 style="color: #000">Navigation</h3>
                         <ul>
                             <li><a href="about.html">About</a></li>
                             <li><a href="admission-form.html">Admissions </a></li>
@@ -366,30 +360,27 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="tweet_box">
-                        <h3>Tweets</h3>
-                        <div class="tweet-wrap">
-                            <div class="tweet"></div>
-                            <!-- // end .tweet -->
-                        </div>
-                    </div>
+
                 </div>
                 <div class="col-md-3">
                     <div class="address">
-                        <h3>Contact us</h3>
-                        <p><span>Address: </span> Unisco university Albany, NY, USA. 11001</p>
-                        <p>Email : info@unisco.com
-                            <br> Phone : +91 555 668 986</p>
-                            <ul class="footer-social-icons">
-                                <li><a href="#"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin fa-in" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
+                        <h3 style="color: #000">Contact us</h3>
+                        <p>Address: Los Angeles, California</p>
+                        <p>Email : cassie@misla.org
+                            <br> Phone : +1-424-253-8873
+                        </p>
+                        <ul class="footer-social-icons">
+                            <li><a href="https://www.facebook.com/MadeinSLA"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/therealmisla/"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/therealmisla"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw"><i class="fa fa-youtube-play fa-yt" aria-hidden="true"></i></a></li>
+
+                        </ul>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
         <!--//END FOOTER -->
         <!-- jQuery, Bootstrap JS. -->
         <script src="js/jquery.min.js"></script>
