--- a/html/blog.html
+++ b/html/blog.html
@@ -103,7 +103,7 @@
 <section class="blog-wrap">
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <div class="blog-single-item">
                     <div class="blog-img_block">
                         <img src="images/Cassie-Betts-02-700x642.jpg" class="img-fluid" alt="blog-img">
@@ -155,110 +155,39 @@
 <!--                    </ul>-->
 <!--                </nav>-->
             </div>
-            <div class="col-md-4">
-                <form>
-                    <input type="text" placeholder="Search" class="blog-search">
-                    <button type="submit" class="btn btn-warning btn-blogsearch">SEARCH</button>
-                </form>
-<!--                <div class="blog-category_block">-->
-<!--                    <h3>Category</h3>-->
-<!--                    <ul>-->
-<!--                        <li><a href="#">Vivamus elementum elit<i class="fa fa-caret-right" aria-hidden="true"></i></a></li>-->
-<!--                        <li><a href="#">Maecenas ut dui at lorem  <i class="fa fa-caret-right" aria-hidden="true"></i></a></li>-->
-<!--                        <li><a href="#">Quisque quis libero quis augue  <i class="fa fa-caret-right" aria-hidden="true"></i></a></li>-->
-<!--                        <li><a href="#">Curabitur consequat odio<i class="fa fa-caret-right" aria-hidden="true"></i></a></li>-->
-<!--                        <li><a href="#">Aliquam tristique turpis<i class="fa fa-caret-right" aria-hidden="true"></i></a></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--                <div class="blog-featured_post">-->
-<!--                    <h3>Featured Post</h3>-->
-<!--                    <div class="blog-featured-img_block">-->
-<!--                        <a href="#"> <img src="images/blog/blogpost-img_01.jpg" class="img-fluid" alt="blog-featured-img">-->
-<!--                            <h5>Heading</h5>-->
-<!--                            <p>Lorem Ipsum is simply dummy text of the printing and typeset</p>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                    <hr>-->
-<!--                </div>-->
-<!--                <div class="blog-featured_post">-->
-<!--                    <div class="blog-featured-img_block">-->
-<!--                        <a href="#"> <img src="images/blog/blogpost-img_02.jpg" class="img-fluid" alt="blog-featured-img">-->
-<!--                            <h5>Heading</h5>-->
-<!--                            <p>Lorem Ipsum is simply dummy text of the printing and typeset</p>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                    <hr>-->
-<!--                </div>-->
-<!--                <div class="blog-featured_post">-->
-<!--                    <div class="blog-featured-img_block">-->
-<!--                        <a href="#"><img src="images/blog/blogpost-img_03.jpg" class="img-fluid" alt="blog-featured-img">-->
-<!--                            <h5>Heading</h5>-->
-<!--                            <p>Lorem Ipsum is simply dummy text of the printing and typeset</p>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="blog-tags_wrap">-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-12">-->
-<!--                            <h3>Tags</h3>-->
-<!--                        </div>-->
-<!--                        <a href="#" class="blog-tags">-->
-<!--                            <span>Education</span>-->
-<!--                        </a>-->
-<!--                        <a href="#" class="blog-tags">-->
-<!--                            <span>Calass</span>-->
-<!--                        </a>-->
-<!--                        <a href="#" class="blog-tags">-->
-<!--                            <span>Seat</span>-->
-<!--                        </a>-->
-<!--                        <a href="#" class="blog-tags">-->
-<!--                            <span>Teachers</span>-->
-<!--                        </a>-->
-<!--                        <a href="#" class="blog-tags">-->
-<!--                            <span>Library</span>-->
-<!--                        </a>-->
-<!--                        <a href="#" class="blog-tags">-->
-<!--                            <span>Food</span>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-            </div>
         </div>
     </div>
 </section>
 <!--//END BLOG -->
-<!--============================= Instagram Feed =============================-->
-<div id="instafeed"></div>
-<!--//END Instagram feed JS -->
-<!--============================= FOOTER =============================-->
+    <hr>
 <footer>
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="subscribe">
-                    <h3>Newsletter</h3>
-                    <form id="subscribeform" action="php/subscribe.php" method="post">
-                        <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
-                        <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
-                        <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
-                        <!-- // end #js-subscribe-result -->
-                    </form>
-                </div>
-            </div>
-        </div>
+<!--        <div class="row">-->
+<!--            <div class="col-md-12">-->
+<!--                <div class="subscribe">-->
+<!--                    <h3>Newsletter</h3>-->
+<!--                    <form id="subscribeform" action="php/subscribe.php" method="post">-->
+<!--                        <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">-->
+<!--                        <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>-->
+<!--                        <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>-->
+<!--                        &lt;!&ndash; // end #js-subscribe-result &ndash;&gt;-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="row">
             <div class="col-md-3">
                 <div class="foot-logo">
                     <a href="index.html">
                         <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
                     </a>
-                    <p>2016 © copyright
+                    <p>2020 © copyright
                         <br> All rights reserved.</p>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="sitemap">
-                        <h3>Navigation</h3>
+                        <h3 style="color: #000">Navigation</h3>
                         <ul>
                             <li><a href="about.html">About</a></li>
                             <li><a href="admission-form.html">Admissions </a></li>
@@ -269,24 +198,21 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="tweet_box">
-                        <h3>Tweets</h3>
-                        <div class="tweet-wrap">
-                            <div class="tweet"></div>
-                            <!-- // end .tweet -->
-                        </div>
-                    </div>
+
                 </div>
                 <div class="col-md-3">
                     <div class="address">
-                        <h3>Contact us</h3>
-                        <p><span>Address: </span> Unisco university Albany, NY, USA. 11001</p>
-                        <p>Email : info@unisco.com
-                            <br> Phone : +91 555 668 986</p>
+                        <h3 style="color: #000">Contact us</h3>
+                        <p>Address: Los Angeles, California</p>
+                        <p>Email : cassie@misla.org
+                            <br> Phone : +1-424-253-8873
+                        </p>
                             <ul class="footer-social-icons">
-                                <li><a href="#"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin fa-in" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/MadeinSLA"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.instagram.com/therealmisla/"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
+                                <li><a href="https://twitter.com/therealmisla"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw"><i class="fa fa-youtube-play fa-yt" aria-hidden="true"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
