--- a/business/html/contact.html
+++ b/business/html/contact.html
@@ -261,7 +261,7 @@
             <!-- Script JS -->
             <script src="js/script.js"></script>
             <!-- Map JS (Please change the API key below. Read documentation for more info) -->
-            <script src="https://maps.googleapis.com/maps/api/js?callback=myMap&key=AIzaSyDMTUkJAmi1ahsx9uCGSgmcSmqDTBF9ygg"></script>
+            <script src="https://maps.googleapis.com/maps/api/js?callback=myMap&key=YOUR_API_KEY_HERE"></script>
         </body>
 
         </html>
