--- a/html/CSL.html
+++ b/html/CSL.html
@@ -93,13 +93,15 @@
 <!--//END ABOUT IMAGE -->
 <!--============================= ADMISSION DETAILS COURCES =============================-->
 <section class="admission_cources">
-    <div class="container">
-
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSecafz0WemkTdQ9Rdoynk84FXC8WVjoSGEi42yRTXjgF23kTQ/viewform?usp=send_form"><div><iframe type="application/pdf" src="images/CSL-Virtual-Camp-Flyer%20.pptx.pdf" width="100%" height="1200"></iframe>
+    <div class="container text-center">
+        <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mb-5">REGISTER NOW</a>
+        <div class="camp-flyr">
+            <iframe type="application/pdf" src="images/CSL-Virtual-Camp-Flyer.pdf" width="100%" height="1200"></iframe>
         </div>
-        </a>
+        <hr>
+        <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning">REGISTER NOW</a>
 
-            <!--============================= FOOTER =============================-->
+        <!--============================= FOOTER =============================-->
             <footer>
                 <div class="container">
                     <div class="row">
