--- a/html/CSL.html
+++ b/html/CSL.html
@@ -15,7 +15,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Course Details- MISLA</title>
+    <title>CSL Virtual Camp</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <!-- Bootstrap CSS -->
