--- a/html/CSL.html
+++ b/html/CSL.html
@@ -95,11 +95,16 @@
 <section class="admission_cources">
     <div class="container text-center">
         <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mb-5">REGISTER NOW</a>
-        <div class="camp-flyr">
-            <iframe type="application/pdf" src="images/CSL-Virtual-Camp-Flyer.pdf" width="100%" height="1200"></iframe>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10 text-center d-inline-block">
+                <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank">
+                    <img src="images/CSL-Virtual-Camp-Flyer-1.jpg" style="border: 1px solid;" alt="image" class="img-fluid">
+                </a>
+            </div>
+            <div class="col-md-1"></div>
         </div>
-        <hr>
-        <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning">REGISTER NOW</a>
+
 
         <!--============================= FOOTER =============================-->
             <footer>
@@ -158,6 +163,8 @@
                             </div>
                         </div>
                     </footer>
+    </div>
+</section>
                     <!--//END FOOTER -->
                     <!-- jQuery, Bootstrap JS. -->
                     <script src="js/jquery.min.js"></script>
