--- a/html/CSL.html
+++ b/html/CSL.html
@@ -36,7 +36,7 @@
 
 <body>
     <!-- ========================= ABOUT IMAGE =========================-->
-    <div class="about_bg">
+    <div class="about_bg" style="background-image: url(images/code1.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -94,15 +94,18 @@
 <!--============================= ADMISSION DETAILS COURCES =============================-->
 <section class="admission_cources">
     <div class="container text-center">
-        <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mb-5">REGISTER NOW</a>
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10 text-center d-inline-block">
                 <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank">
                     <img src="images/CSL-Virtual-Camp-Flyer-1.jpg" style="border: 1px solid;" alt="image" class="img-fluid">
                 </a>
+
+                <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mt-4">REGISTER NOW</a>
+
             </div>
             <div class="col-md-1"></div>
+
         </div>
 
 
