--- a/html/quickbytes.html
+++ b/html/quickbytes.html
@@ -36,7 +36,7 @@
 
 <body>
     <!-- ========================= ABOUT IMAGE =========================-->
-    <div class="about_bg" style="background-image: url(images/code1.jpg)">
+    <div class="about_bg" style="background-image: url(images/quick-bytes.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -83,11 +83,11 @@
                       </nav>
                   </div>
               </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h1 style="padding-bottom: 30px">CSL Virtual Camp</h1>
+            <div>
+                <h1 class="font-weight-bold mb-1">Quick Bytes</h1>
+
             </div>
-        </div>
+
     </div>
 </div>
 <!--//END ABOUT IMAGE -->
@@ -97,12 +97,43 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10 text-center d-inline-block">
-                <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank">
-                    <img src="images/CSL-Virtual-Camp-Flyer-1.jpg" style="border: 1px solid;" alt="image" class="img-fluid">
-                </a>
+                <p>Do you ever need some quick coding work? Maybe there is a small bug on your website? A button links to the wrong page. You need a color change. You want to add/ change out a picture or paragraph or two... We have just the thing! <b>Quick Bytes</b> is your quick website solution. We can add a flyer to your website. Link a flyer to your registration page. Add a video to your homepage. Create online forms and surveys. The list goes on.</p>
+                <strong>Simply put in your order for a Quick Byte, and someone will get back with you in a snap!</strong>
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-10">
+                        <form name="quickBytesForm" method="POST" data-netlify="true" class="quick-form mt-5">
+                            <p class="text-white">Fill Out the form!</p>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Name*" name="name" required="" aria-required="true">
+                            </div>
+                            <!-- // end .form-group -->
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email*" name="email" required="" aria-required="true">
+                            </div>
+                            <!-- // end .form-group -->
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Phone" name="phone" aria-required="true">
+                            </div>
+                            <!-- // end .form-group -->
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Website URL*" name="website" required="" aria-required="true">
+                            </div>
+                            <!-- // end .form-group -->
+                            <div class="form-group">
+                                <textarea placeholder="What Quick Byte would you like to order?*" class="form-control" name="message" required="" rows="5" aria-required="true"></textarea>
+                            </div>
+                            <!-- // end .form-group -->
+                            <div class="form-group">
+                                <div data-netlify-recaptcha="true"></div>
+                            </div>
+                            <!-- // end .form-group -->
+                            <button type="submit" class="btn btn-black1 mt-4" id="js-contact-btn">SUBMIT</button>
+                        </form>
 
-                <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mt-4">REGISTER NOW</a>
-
+                    </div>
+                    <div class="col-md-1"></div>
+                </div>
             </div>
             <div class="col-md-1"></div>
 
@@ -116,7 +147,7 @@
                         <div class="col-md-12">
                             <div class="subscribe">
                                 <h3>Newsletter</h3>
-                                <form id="subscribeform" action="php/subscribe.php" method="post">
+                                <form id="subscribeform" action="#" method="post">
                                     <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
                                     <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
                                     <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
