--- a/html/CSL.html
+++ b/html/CSL.html
@@ -101,7 +101,7 @@
                     <img src="images/CSL-Virtual-Camp-Flyer-1.jpg" style="border: 1px solid;" alt="image" class="img-fluid">
                 </a>
 
-                <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mt-4">REGISTER NOW</a>
+                <a href="https://forms.gle/32U1qQ6FPnWUbuPF6" target="_blank" class="btn btn-warning mt-4">REGISTRATION FULL</a>
 
             </div>
             <div class="col-md-1"></div>
