--- a/html/CSL.html
+++ b/html/CSL.html
@@ -5,11 +5,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129411455-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'UA-129411455-1');
+        gtag('config', 'UA-129411455-1');
     </script>
 
     <!-- Required meta tags -->
@@ -35,54 +35,55 @@
 </head>
 
 <body>
-    <!-- ========================= ABOUT IMAGE =========================-->
-    <div class="about_bg" style="background-image: url(images/code1.jpg)">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <a href="index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
-                </div>
+<!-- ========================= ABOUT IMAGE =========================-->
+<div class="about_bg" style="background-image: url(images/code1.jpg)">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <a href="../index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-                        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
-                            <span class="icon-menu"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
-                                <li><a class="nav-link" href="../index.html" target = "_blank">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="chairman-speech.html" target = "_blank">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="../index.html" target = "_blank">Team</a>
-                                </li>
-                                <li class="nav-logo">
-                                    <a href="../index.html" target = "_blank" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">Scholarships</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Classes
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="course-detail.html">October 8 - November 15</a></li>
-                                        <li><a class="dropdown-item" href="course-detail nov.html">November 26 - Dec 20</a></li>
-                                        <li><a class="dropdown-item" href="course-detail jan.html">Jan 7-31</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="../index.html" target = "_blank">Donate</a>
-                                </li>
-                            </ul>
-                          </div>
-                      </nav>
-                  </div>
-              </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+                        <span class="icon-menu"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="http://misla.org/" target = "_blank">Home<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../html/chairman-speech.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html#team">Team</a>
+                            </li>
+                            <li class="nav-logo">
+                                <a href="http://misla.org/" target = "_blank" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">Scholarships</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Classes
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="course-detail.html">Oct 1 - Nov 15</a></li>
+                                    <li><a class="dropdown-item" href="course-detail nov.html">November 26 - Dec 20</a></li>
+                                    <li><a class="dropdown-item" href="course-detail jan.html">Jan 7-31</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html#donate" >Donate</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 <h1 style="padding-bottom: 30px">CSL Virtual Camp</h1>
@@ -108,81 +109,68 @@
 
         </div>
 
-
-        <!--============================= FOOTER =============================-->
-            <footer>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="subscribe">
-                                <h3>Newsletter</h3>
-                                <form id="subscribeform" action="php/subscribe.php" method="post">
-                                    <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
-                                    <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
-                                    <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
-                                    <!-- // end #js-subscribe-result -->
-                                </form>
-                            </div>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="subscribe">
+                            <h3>Newsletter</h3>
+                            <form name="NewsLetter" method="POST" data-netlify="true">
+                                <input class="signup_form" type="text" name="email" id="email" placeholder="Enter Your Email Address" required>
+                                <button type="submit" name="submit" class="btn btn-warning">SUBSCRIBE</button>
+                            </form>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="foot-logo">
-                                <a href="index.html">
-                                    <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
-                                </a>
-                                <p>2020 © copyright
-                                    <br> All rights reserved.</p>
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="sitemap">
-                                    <h3>Navigation</h3>
-                                    <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="admission-form.html">Admissions </a></li>
-                                        <li><a href="admission.html">Academics</a></li>
-                                        <li><a href="research.html">Research</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                              <div class="address">
-                                  <h3>Contact us</h3>
-                                  <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
-                                  <p>Email : info@misla.org
-                                      <br> Phone : 323-753-2335</p>
-                                      <ul class="footer-social-icons">
-                                          <li><a href="https://www.facebook.com/MadeinSLA" target="_blank"><i class="fa fa-github fa-fb" aria-hidden="true"></i></a></li>
-                                          <li><a href="https://www.instagram.com/therealmisla" target="_blank"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
-                                          <li><a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
-                                          <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw" target="_blank"><i class="fa fa-youtube fa-in" aria-hidden="true"></i></a></li>
-                                      </ul>
-                            </div>
-                            <div class="col-md-3">
-                                    </div>
-                                </div>
-                            </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="foot-logo">
+                            <a href="https://vsedc.org/" target="_blank">
+                                <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
+                            </a>
+
                         </div>
-                    </footer>
+                    </div>
+                    <div class="col-md-2">
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-3">
+                        <div class="address">
+                            <h3>Contact us</h3>
+                            <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                            <p>Email : info@misla.org
+                                <br> Phone : 323-753-2335</p>
+                            <ul class="footer-social-icons">
+                                <li><a href="https://www.facebook.com/MadeinSLA" target="_blank"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.instagram.com/therealmisla" target="_blank"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
+                                <li><a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw" target="_blank"><i class="fa fa-youtube fa-in" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <p class="text-center">Copyright ©2020 - All Rights Reserved. Made by
+                    <a href="http://misla.org/">MISLA</a></p>
+            </div>
+        </footer>
     </div>
 </section>
-                    <!--//END FOOTER -->
-                    <!-- jQuery, Bootstrap JS. -->
-                    <script src="js/jquery.min.js"></script>
-                    <script src="js/tether.min.js"></script>
-                    <script src="js/bootstrap.min.js"></script>
-                    <!-- Plugins -->
-                    <script src="js/slick.min.js"></script>
-                    <script src="js/instafeed.min.js"></script>
-                    <script src="js/owl.carousel.min.js"></script>
-                    <script src="js/validate.js"></script>
-                    <script src="js/tweetie.min.js"></script>
-                    <!-- Subscribe -->
-                    <script src="js/subscribe.js"></script>
-                    <!-- Script JS -->
-                    <script src="js/script.js"></script>
-                </body>
+<!--//END FOOTER -->
+<!-- jQuery, Bootstrap JS. -->
+<script src="js/jquery.min.js"></script>
+<script src="js/tether.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- Plugins -->
+<script src="js/slick.min.js"></script>
+<script src="js/instafeed.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/validate.js"></script>
+<script src="js/tweetie.min.js"></script>
+<!-- Subscribe -->
+<script src="js/subscribe.js"></script>
+<!-- Script JS -->
+<script src="js/script.js"></script>
+</body>
 
-                </html>
+</html>
