--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="logo">
-            <a href="#home"> <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="" /> </a>
+            <a href="index.html"> <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="" /> </a>
           </div>
         </div>
         <div class="col-md-9">
