--- a/html/contact.html
+++ b/html/contact.html
@@ -115,7 +115,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-6 contact-option">
                             <div class="contact-option_rsp">
                                 <h3>Leave a message</h3>
-                                <form action="php/contact.php" method="post" id="phpcontactform">
+                                <form action="" name="contactForm" method="POST" data-netlify="true">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Name" name="name" required>
                                     </div>
