--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
     <div class="row">
       <div class="col-md-8 col-sm-12">
         <div class="contact-from">
-          <form action="" method="post">
-            <div class="form-group col-md-6" name="contactForm" method="POST" data-netlify="true">
+          <form action="" name="contactForm" method="POST" data-netlify="true">
+            <div class="form-group col-md-6" >
               <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name" required="required" />
             </div>
             <div class="form-group col-md-6">
