--- a/resume/index.html
+++ b/resume/index.html
@@ -672,7 +672,7 @@
             <div class="eight columns">
 
                <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
+               <form action="" name="contactForm" method="POST" data-netlify="true">
 					<fieldset>
 
                   <div>
