--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-rig">
-                  <li><a class="smoth-scroll" href="/html/chairman-speech.html" target="_blank">about</a></li>
-                  <li><a class="smoth-scroll" href="/html/bootcamps.html" target="_blank">bootcamps</a></li>
+                  <li><a class="smoth-scroll" href="html/chairman-speech.html" target="_blank">about</a></li>
+                  <li><a class="smoth-scroll" href="html/bootcamps.html" target="_blank">bootcamps</a></li>
                   <li><a class="smoth-scroll" href="#team">team</a></li>
-                  <li><a class="smoth-scroll" href="/webdesign.html" target="_blank">hire us</a></li>
+                  <li><a class="smoth-scroll" href="webdesign.html" target="_blank">hire us</a></li>
                   <li><a class="smoth-scroll" href="#testimonial">partners</a></li>
                   <li><a class="smoth-scroll" href="#donate">donate</a></li>
                   <li><a class="smoth-scroll" href="https://marty.world/latest-insights.html" target="_blank">blog</a></li>
@@ -109,7 +109,7 @@
                       <p>Video Game Design &amp; Development</p>
                       <p>Web Design &amp; development</p>
                       <p>Youtube Creator</p>
-                      <a class="slide-btn smoth-scroll" href="../html/bootcamps.html" target="_blank">register</a>
+                      <a class="slide-btn smoth-scroll" href="html/bootcamps.html" target="_blank">register</a>
                       <a class="slide-btn blank-btn smoth-scroll" href="#contact">contact</a>
                     </div>
                   </div>
@@ -473,7 +473,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="item-buy text-right"><a href="../html/course-detail.html" target="_blank" class="item_buy pull-right">Register</a></div>
+        <div class="item-buy text-right"><a href="html/course-detail.html" target="_blank" class="item_buy pull-right">Register</a></div>
       </div>
     </div>
   </div>
