--- a/business/index.html
+++ b/business/index.html
@@ -878,7 +878,7 @@ END BLOG AREA -->
           </div>
           <div class="col-md-3">
             <div class="item-buy text-right">
-              <a href="../html/course-detail.html" target = "_blank" class="item_buy pull-right">Register</a>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScgrMZxQGSkwvj3j0tIxJklTdd6TqbeYNrt4M3vFtmWoDMaYg/viewform" target = "_blank" class="item_buy pull-right">Register</a>
               <!-- <a class="smoth-scroll" href="#contact">contact us</a> -->
             </div>
           </div>
