--- a/html/chairman-speech.html
+++ b/html/chairman-speech.html
@@ -131,7 +131,7 @@
                     Click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">here</a>
                     to apply for a MISLA scholarship!
                     <br/>
-                    Click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">here</a>
+                    Click <a href="https://marty.world/services.html" target = "_blank">here</a>
                     to hire our students to create your website.
                 </p>
                 <img src="images/welcom_sign.png" class="img-fluid" alt="welcom-img">
