--- a/webdesign.html
+++ b/webdesign.html
@@ -103,7 +103,7 @@
                   </li>
                   <li><a class="smoth-scroll" href="/html/course-detail.html" target = "_blank">Bootcamps</a>
                   </li>
-                  <li><a class="smoth-scroll" href="#work">hire us</a>
+                  <li><a class="smoth-scroll" href="https://marty.world/services.html">hire us</a>
                   </li>
                   <!--
                   <li><a class="smoth-scroll" href="#testimonial">Instructors</a>
@@ -143,7 +143,7 @@
                         <br/>
                         <br/>Click <a href="https://www.eventbrite.com/e/hire-south-central-students-to-build-your-website-tickets-51949865446" target = "_blank">here</a> for more info.
                       </p>
-                      <a class="slide-btn smoth-scroll" href="https://www.eventbrite.com/e/hire-south-central-students-to-build-your-website-tickets-51949865446" target = "_blank" >hire us</a>
+                      <a class="slide-btn smoth-scroll" href="https://marty.world/services.html" target = "_blank" >hire us</a>
                       <a class="slide-btn blank-btn smoth-scroll" href="#contact">contact</a>
                     </div>
                   </div>
