--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                   <li><a class="smoth-scroll" href="html/chairman-speech.html" target="_blank">about</a></li>
                   <li><a class="smoth-scroll" href="html/bootcamps.html" target="_blank">bootcamps</a></li>
                   <li><a class="smoth-scroll" href="#team">team</a></li>
+                  <li><a class="smoth-scroll" href="webdesign.html">Our Work</a></li>
                   <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
                   <li><a class="smoth-scroll" href="#testimonial">partners</a></li>
                   <li><a class="smoth-scroll" href="#donate">donate</a></li>
