--- a/webdesign.html
+++ b/webdesign.html
@@ -103,6 +103,7 @@
                   </li>
                   <li><a class="smoth-scroll" href="/html/course-detail.html" target = "_blank">Bootcamps</a>
                   </li>
+                  <li><a class="smoth-scroll" href="webdesign.html">Our Work</a></li>
                   <li><a class="smoth-scroll" href="https://marty.world/services.html">hire us</a>
                   </li>
                   <!--
@@ -198,12 +199,48 @@
 
           <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
+              <img src="assets/img/marty.jpg" class="img-responsive" alt="" />
+              <div class="work-details">
+                <div class="overlay"></div>
+                <div class="work_info">
+                  <a href="https://marty.world/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Marty World</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 mix design video">
+            <div class="single-work">
+              <img src="assets/img/brvni.jpg" class="img-responsive" alt="" />
+              <div class="work-details">
+                <div class="overlay"></div>
+                <div class="work_info">
+                  <a href="http://bevinimodena.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Bevini Modena</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 mix design video">
+            <div class="single-work">
               <img src="assets/img/uni.png" class="img-responsive" alt="" />
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
                   <a href="https://unitedhands4forall.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>United Hands for all</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 mix design video">
+            <div class="single-work">
+              <img src="assets/img/kira.jpg" class="img-responsive" alt="" />
+              <div class="work-details">
+                <div class="overlay"></div>
+                <div class="work_info">
+                  <a href="http://www.kiramagazine.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>kira Magazine</h2>
                 </div>
               </div>
             </div>
@@ -216,8 +253,8 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>#1<br/>Travel</h2>
+                  <a href="https://www.cassiebetts.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Travel</h2>
                 </div>
               </div>
             </div>
@@ -230,8 +267,8 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>#2<br/>Business</h2>
+                  <a href="business/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Business</h2>
                 </div>
               </div>
             </div>
@@ -244,7 +281,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="nonprofit/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>Built by<br/>Cameron &amp; Jaiden Smith<br/>Ages 14 &amp; 10</h2>
                 </div>
               </div>
@@ -258,8 +295,8 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>#4<br/>resume</h2>
+                  <a href="resume/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Resume</h2>
                 </div>
               </div>
             </div>
@@ -272,8 +309,8 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>#5<br/>Conference</h2>
+                  <a href="conference/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Conference</h2>
                 </div>
               </div>
             </div>
@@ -286,8 +323,8 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>#6<br/>Startup</h2>
+                  <a href="startup/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>Startup</h2>
                 </div>
               </div>
             </div>
@@ -300,7 +337,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="#"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="rocketstudios/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>Built by<br/>Caleb Meyers<br/>Age 13</h2>
                 </div>
               </div>
