--- a/html/admission-form.html
+++ b/html/admission-form.html
@@ -43,6 +43,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="admission-form.html">Admissions</a>
                                 </li>
+                                <li><a class="smoth-scroll" href="webdesign.html">Our Work</a></li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="academics.html">Academics</a>
                                 </li>
