--- a/html/teachers-single.html
+++ b/html/teachers-single.html
@@ -39,8 +39,11 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/" target = "_blank">Home<span class="sr-only">(current)</span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="../webdesign.html">Our Work</a></li>
+                                    </ul>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="admission-form.html">Admissions</a>
