--- a/html/videogamebootcamp.html
+++ b/html/videogamebootcamp.html
@@ -51,7 +51,11 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
-                                <li><a class="nav-link" href="../index.html" target = "_blank">Home</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/" target = "_blank">Home<span class="sr-only">(current)</span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="../webdesign.html">Our Work</a></li>
+                                    </ul>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="chairman-speech.html" target = "_blank">About</a>
