--- a/webdesign.html
+++ b/webdesign.html
@@ -471,7 +471,11 @@
           <h2>Subscribe to our newsletter!</h2>
         </div>
         <div class="newsletter-from text-center">
-          <form name="NewsLetter" method="POST" data-netlify="true" data-toggle="validator"> <input required="required"  type="email" name="email" id="email" placeholder="Email..."> <span class="input-group-btn"> <button class="btn btn-detault btn-light-bg" type="submit" name="submit" >Subscribe</button> </span></form>
+          <form name="NewsLetter" method="POST" data-netlify="true" data-toggle="validator">
+            <input required="required"  type="email" name="email" id="email" placeholder="Email...">
+            <span class="input-group-btn">
+              <button class="btn btn-detault btn-light-bg" type="submit" name="submit" >Subscribe</button> </span>
+          </form>
         </div>
       </div>
     </div>
