--- a/webdesign.html
+++ b/webdesign.html
@@ -472,7 +472,7 @@
         </div>
         <div class="newsletter-from text-center">
           <form name="NewsLetter" method="POST" data-netlify="true" data-toggle="validator">
-            <input required="required"  type="email" name="email" id="email" placeholder="Email...">
+            <input required="required"  type="email" name="email1" id="email1" placeholder="Email...">
             <span class="input-group-btn">
               <button class="btn btn-detault btn-light-bg" type="submit" name="submit" >Subscribe</button> </span>
           </form>
@@ -617,9 +617,6 @@
       </div>
       <div class="form-group col-md-12">
         <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>
-      </div>
-      <div class="form-group col-md-12">
-        <div data-netlify-recaptcha="true"></div>
       </div>
       <div class="col-md-12"> <button type="submit" name="submit" >send message</button></div>
     </form>
