--- a/webdesign.html
+++ b/webdesign.html
@@ -178,11 +178,8 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="section-title text-center wow zoomIn">
-                <h2>Check out our work</h2>
-                <h3>Each website below was built by one or more of our students. Choose
-                  One of the following styles as a basic template for your website.
-                  We can change out pictures, text, and colors.</h3>
-                <h4>There is limited space... 1st come, 1st serve.</h4>
+                <h2>Portfolio</h2>
+                <h3>Each website below was built by one or more of our students.</h3>
               </div>
             </div>
           </div>
@@ -217,7 +214,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="https://unitedhands4forall.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="http://unitedhands4forall.com/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>United Hands for all</h2>
                 </div>
               </div>
